<resources>
    <string name="app_name">Trombi</string>

    <string name="U_annuler">Annuler</string>
    <string name="U_erreur">Une erreur est survenue</string>
    <string name="U_remplacer">Remplacer</string>
    <string name="U_required">Champ requis</string>
    <string name="U_valider">Valider</string>
    <string name="U_enregistrer">Enregistrer</string>

    <string name="DRAWER_item1">Item 1</string>
    <string name="DRAWER_item2">Item 2</string>
    <string name="DRAWER_item3">Item 3</string>
    <string name="DRAWERH_item1">Item 1</string>

    <string name="MAIN_title">Mes trombinoscopes</string>
    <string name="MAIN_emptyRecyclerView">Vous n\'avez aucun trombinoscope :( .</string>
    <string name="MAIN_trombiSuppr">Le trombinoscope a été supprimé</string>
    <string name="MAIN_trombiAjoute">Le trombinoscope a été ajouté</string>
    <string name="MAIN_trombiModifie">Le trombinoscope a été modifié</string>
    <string name="MAIN_modifier">Modifier les élèves</string>
    <string name="MAIN_parametres">Paramètres</string>

    <string name="AJOUTTROMBI_title">Ajouter un trombinoscope</string>
    <string name="AJOUTTROMBI_titleVar">Modifier un trombinoscope</string>
    <string name="AJOUTTROMBI_importer">Importer</string>
    <string name="AJOUTTROMBI_priseALaChaine">Prise de photos à la chaîne</string>
    <string name="AJOUTTROMBI_gererGroupe">Gérer les groupes</string>
    <string name="AJOUTTROMBI_vueTrombi">Voir le trombinoscope</string>
    <string name="AJOUTTROMBI_hint1">Nom</string>
    <string name="AJOUTTROMBI_hint2">Description</string>
    <string name="AJOUTTROMBI_hint3">Insérez votre texte</string>
    <string name="AJOUTTROMBI_menu1">Saisir un texte</string>
    <string name="AJOUTTROMBI_menu2">Choisir un fichier</string>
    <string name="AJOUTTROMBI_contentDesc1">Nom du trombinoscope</string>
    <string name="AJOUTTROMBI_contentDesc2">Description du trombinoscope</string>
    <string name="AJOUTTROMBI_importTitle">Importer une liste</string>
    <string name="AJOUTTROMBI_listeImportee">La liste a été importée</string>
    <string name="AJOUTTROMBI_listeImporteeErr">Le nom du trombinoscope doit être renseigné</string>
    <string name="AJOUTTROMBI_fichierImporte">Le fichier a été importé</string>
    <string name="AJOUTTROMBI_fichierImporteErr">Un problème est survenu lors de l\'importation</string>
    <string name="AJOUTTROMBI_nbEleveText">Nombre d\'élèves: </string>
    <string name="AJOUTTROMBI_nbGroupeText">Nombre de groupes: </string>

    <string name="VUETROMBI_filtre">Réglages</string>
    <string name="VUETROMBI_choixGroupe">Choix du groupe</string>
    <string name="VUETROMBI_nbColonnes">Nombre de colonnes</string>
    <string name="VUETROMBI_afficherDesc">Afficher la description</string>
    <string name="VUETROMBI_exporter">Exporter</string>
    <string name="VUETROMBI_voirEleves">Voir la liste des élèves</string>
    <string name="VUETROMBI_exporterImg">Exporter en tant qu\'image</string>
    <string name="VUETROMBI_exporterPdf">Exporter en tant que PDF</string>
    <string name="VUETROMBI_partagerPdf">Partager le PDF</string>
    <string name="VUETROMBI_exporterListe">Exporter la liste des noms</string>
    <string name="VUETROMBI_exporterTrombi">Exporter le trombinoscope</string>
    <string name="VUETROMBI_listeExportee">La liste a été exportée</string>
    <string name="VUETROMBI_listeExporteeErr">Un problème est survenu lors de l\'exportation</string>
    <string name="VUETROMBI_fichierExiste">Le fichier existe déjà, remplacer ?</string>
    <string name="VUETROMBI_imageExported">L\'image a été exportée</string>
    <string name="VUETROMBI_expandBS">Dérouler la BottomSheet</string>
    <string name="VUETROMBI_noAppPDF">Vous ne diposez pas d\'application d\'impression de PDF</string>

    <string name="CAPT_requestDenied">L\'application doit disposer de ces dorits pour fonctionner.</string>
    <string name="CAPT_photoTaken">Photo capturée !</string>
    <string name="CAPT_photoModified">Photo sauvegardée !</string>
    <string name="CAPT_error">La prise de photo a échouée</string>
    <string name="CAPT_error2">L\'application ne peut pas accéder au répertoire externe de l\'application !</string>
    <string name="CAPT_contentDesc1">Aide pour le cadrage</string>
    <string name="CAPT_contentDesc2">Précédent</string>
    <string name="CAPT_contentDesc3">Suivant</string>
    <string name="CAPT_bannerMessage">Une photo est déjà enregistrée pour cet élève.</string>
    <string name="CAPT_bannerDismiss">Ignorer</string>
    <string name="CAPT_bannerNext">Suivant</string>
    <string name="CAPT_firstEleve">C\'est le premier élève de la liste</string>
    <string name="CAPT_lastEleve">C\'est le dernier élève de la liste</string>
    <string name="CAPT_noEleve">Aucun élève pour ce trombinoscope !</string>

    <string name="LISTe_title">Gérer les élèves</string>
    <string name="LISTe_emptyRecyclerView">Aucun élève dans ce trombinoscope :O .</string>
    <string name="LISTe_imgView">Photo de l\'élève</string>
    <string name="LISTe_fatalError">Erreur fatale, impossible de démarrer l\'activité</string>
    <string name="LISTe_eleveSuppr">L\'élève a été supprimé</string>
    <string name="LISTe_eleveAjoute">L\'élève a été ajouté</string>
    <string name="LISTe_eleveModifie">L\'élève a été modifié</string>

    <string name="ELEVEITEM_contentDesc1">Prendre une photo pour cet élève</string>

    <string name="AJOUTELEVE_title">Ajouter un élève</string>
    <string name="AJOUTELEVE_titleVar">Modifier un élève</string>
    <string name="AJOUTELEVE_hint1">Nom prénom</string>
    <string name="AJOUTELEVE_hint2">Sélectionnez les groupes auxquels l\'élève appartient</string>
    <string name="AJOUTELEVE_contentDesc1">Nom prénom de l\'élève</string>
    <string name="AJOUTELEVE_contentDesc2">Groupes auxquels l\élève appartient</string>
    <string name="AJOUTELEVE_empty">Champ requis</string>
    <string name="AJOUTELEVE_emptyGroup">Aucun groupe dans ce trombinoscope :/ .</string>
    <string name="AJOUTELEVE_handleGroup">Gérer les groupes</string>

    <string name="LISTg_title">Gérer les groupes</string>
    <string name="LISTg_emptyRecyclerView">Aucun groupe dans ce trombinoscope : | .</string>
    <string name="LISTg_groupeSuppr">Le groupe a été supprimé</string>
    <string name="LISTg_groupeAjoute">Le groupe a été ajouté</string>
    <string name="LISTg_groupeModifie">Le groupe a été modifié</string>

    <string name="AJOUTGROUPE_title">Ajouter un groupe</string>
    <string name="AJOUTGROUPE_titleVar">Modifier un groupe</string>
    <string name="AJOUTGROUPE_hint1">Nom</string>
    <string name="AJOUTGROUPE_contentDesc1">Nom du groupe</string>

    <string name="PARA_title">Paramètres</string>
    <string name="PARA_titleNbCol">Nombre de colonnes</string>
    <string name="PARA_nbCol">Sélectionnez le nombre de colonnes voulues par défaut dans l\'affichage des trombinoscopes.</string>
    <string name="PARA_titleFixedRatio">Ratio de recadrage fixe</string>
    <string name="PARA_fixedRatio">Fixer un ratio 1:1 pour le recadrage des photos, afin qu\'elles soient toujours carrées.</string>
    <string name="PARA_titleQuality">Mode latence minimale</string>
    <string name="PARA_quality">Active le mode latence minimale pour la prise de photo. La qualité de la photo sera amoindrie.</string>
    <string name="PARA_titlePara">Parallèlisation chargement images</string>
    <string name="PARA_para">Accélère le chargement de la vue du trombinoscope en utilisant au mieux les ressources du téléphone. Désactivez cette option si l\'affichage des trombinoscopes de fonctionne pas comme voulu.</string>
    <string name="PARA_titleNightMode">Mode sombre</string>
    <string name="PARA_nightMode">Un thème sombre pour préserver votre batterie (et vos beaux yeux).</string>

    <!-- ID pour chips -->
    <string name="TAG_CHIPS_ID">com.ufrst.app.trombi.TAG_CHIPS_ID</string>
</resources>
