<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/VUETROMBI_exporterTrombi"
        android:icon="@drawable/ic_export"
        android:title="@string/VUETROMBI_exporter"
        app:showAsAction="ifRoom" >

        <menu>
            <item
                android:id="@+id/VUETROMBI_exporterImg"
                android:title="@string/VUETROMBI_exporterImg"
                android:icon="@drawable/ic_img" />

            <item
                android:id="@+id/VUETROMBI_exporterPdf"
                android:title="@string/VUETROMBI_exporterPdf"
                android:icon="@drawable/ic_pdf" />

            <item
                android:id="@+id/VUETROMBI_exporterListe"
                android:title="@string/VUETROMBI_exporterListe"
                android:icon="@drawable/ic_list" />

        </menu>
    </item>
</menu>