<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
            <!-- android:icon="@drawable/ic_drawer_home"-->
        <item
            android:id="@+id/NAV_item1"
            android:title="@string/DRAWER_item1"
            android:checkable="false" />
        <item
            android:id="@+id/NAV_item2"
            android:title="@string/DRAWER_item2"
            android:checkable="false" />
        <item
            android:id="@+id/NAV_item3"
            android:title="@string/DRAWER_item3"
            android:checkable="false" />

        <item
            android:id="@+id/NAV_item4"
            android:title="@string/DRAWER_item1" >

            <menu>
                <item
                    android:id="@+id/NAVSUB_item1"
                    android:title="@string/DRAWER_item2"
                    android:checkable="false" />

                <item
                    android:id="@+id/NAVSUB_item2"
                    android:title="@string/DRAWER_item3"
                    android:checkable="false" />
            </menu>
        </item>
    </group>
</menu>