<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CAPT_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <FrameLayout
        android:id="@+id/CAPT_frameLyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/CAPT_previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

<!--        <ImageView-->
<!--            android:id="@+id/CAPT_resultImage"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->

        <com.theartofdev.edmodo.cropper.CropImageView
            android:id="@+id/CAPT_resultImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/CAPT_imgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/CAPT_contentDesc1"
            android:src="@drawable/grid" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/CAPT_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:elevation="4dp"
            app:cardCornerRadius="0dp"
            android:alpha="0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/CAPT_tvBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    style="@style/TextAppearance.AppCompat"
                    android:text="@string/CAPT_bannerMessage" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/CAPT_buttonNextIfPhoto"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/CAPT_tvBanner"
                    android:layout_alignParentEnd="true"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/CAPT_bannerNext" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/CAPT_buttonDismiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/CAPT_tvBanner"
                    android:layout_toStartOf="@+id/CAPT_buttonNextIfPhoto"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/CAPT_bannerDismiss" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/CAPT_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:alpha="0.7"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/CAPT_tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:gravity="center_horizontal"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="22sp" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/CAPT_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="?attr/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/CAPT_previous"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/CAPT_contentDesc2"
                android:src="@drawable/ic_arrow_left"
                android:tint="?attr/colorOnPrimary" />

            <ImageButton
                android:id="@+id/CAPT_next"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="@string/CAPT_contentDesc3"
                android:src="@drawable/ic_arrow_right"
                android:tint="?attr/colorOnPrimary" />

        </RelativeLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/CAPT_takePic"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_photo"
        android:tint="?attr/colorOnPrimary"
        app:layout_anchor="@id/CAPT_toolbar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>