<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/PARA_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundApp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/PARA_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp">

                <TextView
                    android:id="@+id/PARA_titleNbCol"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/PARA_npCol"
                    android:textSize="18sp"
                    android:textColor="?attr/onBackground"
                    android:text="@string/PARA_titleNbCol" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PARA_titleNbCol"
                    android:layout_toStartOf="@+id/PARA_npCol"
                    android:textColor="?attr/textHighEmphasis"
                    android:text="@string/PARA_nbCol" />

                <NumberPicker
                    android:id="@+id/PARA_npCol"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:theme="@style/AppTheme.Picker"
                    android:foregroundTint="?attr/onBackground"
                    android:descendantFocusability="blocksDescendants" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/PARA_switchNbColLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/PARA_titleFixedRatio"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/PARA_switchFixedRatio"
                    android:textSize="18sp"
                    android:textColor="?attr/onBackground"
                    android:text="@string/PARA_titleFixedRatio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PARA_titleFixedRatio"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/PARA_switchFixedRatio"
                    android:textColor="?attr/textHighEmphasis"
                    android:text="@string/PARA_fixedRatio" />

                <Switch
                    android:id="@+id/PARA_switchFixedRatio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/PARA_switchQualityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/PARA_titleQuality"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/PARA_switchQuality"
                    android:textSize="18sp"
                    android:textColor="?attr/onBackground"
                    android:text="@string/PARA_titleQuality" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PARA_titleQuality"
                    android:layout_toStartOf="@+id/PARA_switchQuality"
                    android:textColor="?attr/textHighEmphasis"
                    android:text="@string/PARA_quality" />

                <Switch
                    android:id="@+id/PARA_switchQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/PARA_switchNightModeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="?android:selectableItemBackground">

                <TextView
                    android:id="@+id/PARA_titleNightMode"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/PARA_switchNightMode"
                    android:textSize="18sp"
                    android:textColor="?attr/onBackground"
                    android:text="@string/PARA_titleNightMode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PARA_titleNightMode"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/PARA_switchNightMode"
                    android:textColor="?attr/textHighEmphasis"
                    android:text="@string/PARA_nightMode" />

                <Switch
                    android:id="@+id/PARA_switchNightMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="false" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerColor" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>