<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AJOUTGROUPE_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundApp"
    tools:context=".ui.ActivityAjoutTrombi">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/AJOUTGROUPE_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/AJOUTGROUPE_btnValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="8dp"
        android:text="@string/U_valider"
        android:textColor="?attr/onSecondary"
        style="Widget.MaterialComponents.ExtendedFloatingActionButton.Icon"
        app:icon="@drawable/ic_valid"
        app:iconTint="?attr/onSecondary" />

    <ScrollView
        android:id="@+id/AJOUTGROUPE_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/AJOUTGROUPE_ivIcon1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/AJOUTGROUPE_contentDesc1"
                    android:paddingBottom="8dp"
                    android:src="@drawable/ic_groupname"
                    android:tint="?attr/colorAccent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/AJOUTGROUPE_tilNom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="16dp"
                    android:layout_toEndOf="@+id/AJOUTGROUPE_ivIcon1"
                    android:hint="@string/AJOUTGROUPE_hint1"
                    android:textColorHint="?attr/textHighEmphasis"
                    app:boxStrokeColor="?attr/colorAccent"
                    app:hintTextColor="?attr/colorAccent"
                    app:boxBackgroundColor="?attr/boxBackground">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/AJOUTGROUPE_entrerNom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:textColor="?attr/onBackground"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
